maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:25: error: not found: value estFacemur
	while (!estFacemur()) {
                ^